# cdroid

./: .gitignore  CMakeLists.txt  README.md  build.cr  build.gradle.kts  format.rb  settings.gradle.kts
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/cdroid/app/: CDroid.java  MainActivity.java  ViewHelper.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-v21/: styles.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/cdroid/app/: CDroid.java  Main.java  MainActivity.java  Pointer.java  ViewHelper.java
app/src/main/java/cdroid/app/legacy/: CDroid.java  MainActivity.java  Pointer.java  ViewHelper.java
app/src/main/res/values/: strings.xml  themes.xml
example/: CMakeLists.txt
example/src/: legacy.c  main.c
include/cdroid/: activity.h  button.h  gravity.h  linearlayout.h  log.h  pub.h  textview.h  toast.h  view.h
include/cdroid/internal/: callback.h  j.h  jni.h  ptr.h  state.h  types.h  viewhelper.h
include/cdroid/legacy/: README.md  activity.h  linearlayout.h  log.h  pub.h  textview.h  toast.h  view.h
include/cdroid/legacy/internal/: j.h  ptr.h  state.h  types.h  viewhelper.h
src/: Main.cpp  activity.c  button.c  callback.c  linearlayout.c  main.c  ptr.c  pub.c  state.c  textview.c  toast.c  view.c  viewhelper.c
src/legacy/: activity.c  linearlayout.c  main.c  ptr.c  pub.c  state.c  textview.c  toast.c  view.c  viewhelper.c
